MAGETWO-42871: Storefront menu UI issues on mobile

--- a/app/design/frontend/Magento/blank/web/css/source/_navigation.less
+++ b/app/design/frontend/Magento/blank/web/css/source/_navigation.less
@@ -132,7 +132,7 @@
                 &.greet.welcome {
                     border-top: 1px solid @color-gray82;
                     font-weight: 700;
-                    padding: 8px 20px;
+                    padding: .8rem @indent__base;
                 }
                 > a {
                     border-top: 1px solid @color-gray82;
@@ -144,7 +144,7 @@
                 .lib-css(text-decoration, @navigation-level0-item__text-decoration);
                 display: block;
                 font-weight: 700;
-                padding: 8px 20px;
+                padding: .8rem @indent__base;
             }
         }
     }
